# cmip7-forcings-experiment-setup-guidance-generation

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
scripts/: generate_guidance_docs.py
src/local/: __init__.py  activities.py  branching.py  experiment_dates.py  experiment_descriptions.py  experiment_pairs.py  forcing_references.py  forcing_versions.py  guidance.py  piclim_variants.py  rendering.py  vocab.py
src/local/activity_pages/: __init__.py  aerchemmip.py  c4mip.py  cfmip.py  cmip.py  damip.py  generic.py  geomip.py  pmip.py  rfmip.py  scenariomip.py
